--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -6,7 +6,7 @@
 
     <title>Welcome Page</title>
 
-    <%- include("./_share/stylesheets.ejs") %>
+    <%- include("../_share/stylesheets.ejs") %>
     <!-- Bootstrap core CSS -->
 
 
@@ -30,17 +30,25 @@
     <link href="starter-template.css" rel="stylesheet">
   </head>
   <body>
-    <%- include("./_share/navbar.ejs") %>
+    <%- include("../_share/navbar.ejs") %>
 
     <main role="main" class="container">
 
       <div class="border-bottom mt-5 mb-5">
-        <h1>ようこそNode.jsとExpressの世界へ</h1>
+        <h1><%= title %></h1>
       </div>
-      <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      <dl class="row mt-5 mb-5">
+        <dt class="col-3">公開日:</dt>
+        <dd class="col-9"><%= published.toLocaleString() %></dd>
+        <dt class="col-3">著者:</dt>
+        <dd class="col-9"><%= authors %></dd>
+        <dt class="col-3">キーワード:</dt>
+        <dd class="col-9"><%= keyword %></dd>
+      </dl>
+      <p class="lead"><%= content %></p>
 
     </main>
     <!-- /.container -->
-    <%- include("./_share/javascripts.ejs") %>
+    <%- include("../_share/javascripts.ejs") %>
   </body>
 </html>
