--- a/views/_share/navbar.ejs
+++ b/views/_share/navbar.ejs
@@ -10,5 +10,10 @@
         <a class="nav-link" href="/account">Account</a>
       </li>
     </ul>
+    <% if (locals.user) { %>
+    <form method="post" action="/account/logout" class="form-inline my-2 my-lg-0">
+      <input type="button" class="btn btn-outline-success my-2 my-sm-0" type="submit" value="logout" />
+    </form>
+    <% } %>
   </div>
 </nav>
